--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -185,8 +185,8 @@
 
       .listing-actions {
         display: flex;
-        flex-direction: column;
-        gap: 8px; 
+        flex-direction: row;
+        gap: 4px; 
         align-items: center;
         justify-content: space-between;
         width: 100%;
