--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -174,6 +174,7 @@
       .delete-button, .edit-button {
         font-size: 11px;
         padding: 4px 8px;
+        margin: 0;
         /*
         min-width: 30px;
         height: 24px;
@@ -190,6 +191,7 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        flex-wrap: nowrap;
         /*
         display: none;
         margin-top: 10px;
