post listing subheading

--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -89,8 +89,9 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/post_listings">Post Listing to Buy or Sell</a> 
+        <a href="/post_listings">Post Listing</a> 
       </header>
+      <div class="subheading">Enter details for a swipe you want to buy or sell</div>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
           <form id="listingForm" action="/submit_listing" method="POST" onsubmit="return requireSignIn(event)">
