--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -370,6 +370,7 @@
     display: none;
     margin-top: 10px;
     gap: 5px;
+    background-color: green;
   }
   
   .delete-button, .edit-button, .block-button {
