--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -192,6 +192,7 @@
         justify-content: space-between;
         width: 100%;
         flex-wrap: nowrap;
+        background-color: green;
         /*
         display: none;
         margin-top: 10px;
