--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -91,7 +91,7 @@
       <header class="header" id="index-header">
         <a href="/post_listings">Post Listing</a> 
       </header>
-      <div class="subheading">Enter details for a swipe you want to buy or sell</div>
+      <div class="subheading">Enter details for a swipe you want to <span style="font-weight: 550">buy or sell</span></div>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
           <form id="listingForm" action="/submit_listing" method="POST" onsubmit="return requireSignIn(event)">
