--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -175,6 +175,7 @@
         font-size: 11px;
         padding: 4px 8px;
         margin: 0 0 0 0;
+        top:0;
         /*
         min-width: 30px;
         height: 24px;
