--- a/templates/profile.html
+++ b/templates/profile.html
@@ -129,7 +129,7 @@
         </div>
       </div>
       <header class="header" id="index-header">
-        <a href="/profile">User Profile</a> 
+        <a href="/profile">Your Profile</a> 
       </header>
       
       <div class="profile-container">
