--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -175,7 +175,7 @@
         font-size: 11px;
         padding: 4px 8px;
         margin: 0 0 0 0;
-        top:0;
+        top: 0;
         /*
         min-width: 30px;
         height: 24px;
@@ -190,10 +190,9 @@
         flex-direction: row;
         gap: 4px; 
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         width: 100%;
         flex-wrap: nowrap;
-        background-color: green;
         /*
         display: none;
         margin-top: 10px;
