test green back

--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -193,6 +193,7 @@
         justify-content: center;
         width: 100%;
         flex-wrap: nowrap;
+        background-color: green;
         /*
         display: none;
         margin-top: 10px;
