--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -320,4 +320,14 @@
       .how-it-works-content li {
         margin-bottom: 10px;
       }
+
+      .form-popup{
+        padding: 10px 20px 20px 20px;
+        width: 70%;
+        max-width: 500px;
+        max-height: 70vh;
+        overflow-y: scroll;
+        position: relative;
+        
+      }
   }
