--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -174,13 +174,15 @@
       .delete-button, .edit-button {
         font-size: 11px;
         padding: 4px 8px;
+        align-items: center;
+        justify-content: center;
+        /*
         min-width: 30px;
         height: 24px;
         line-height: 1;
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin: 0;
+        justify-content: center;*/
       }
 
       .listing-actions {
