remove background color

--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -193,8 +193,7 @@
         justify-content: center;
         width: 100%;
         flex-wrap: nowrap;
-        background-color: green;
-        /*
+        /*background-color: green;
         display: none;
         margin-top: 10px;
         gap: 5px;*/
