--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -136,6 +136,7 @@
       .offer-button, .request-button {
         font-size: 18px;
         padding: 4px 10px;
+        background-color: red;
       }
   
       .button-group {
