--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -41,11 +41,11 @@
         left: 10px;
         color: #666;
       }
+      
       .price-input-wrapper input {
         padding-left: 25px;
-        line-height: 1.5;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        align-items: center;
+        padding-top: 10px;
       }
       .button-group {
         display: flex;
