--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -72,7 +72,7 @@
     transition: all 0.2s ease;
   }
 
-  .sell-button:hover {
+  .sell-button:hover,.offer-button:hover, .request-button:hover {
     background-color: #2b7de9;
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(66, 133, 244, 0.4);
