--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -140,6 +140,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        margin-top: -10px;
       }
 
       /*
