--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
           <div id="profile-menu" class="profile-menu">
             <img id="profile-icon" src="" alt="Profile"/>
             <div id="profile-dropdown" class="profile-dropdown">
-              <a href="/profile"><button>Profile</button></a>
+              <a href="/profile" class="dropdown-item">Profile</a>
               <button onclick="handleSignOut()">Sign Out</button>
             </div>
           </div>
