--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -67,6 +67,10 @@
         padding: 0 !important;
       }
 
+      .form-container{
+        margin: 10px 20px;
+      }
+
       .signin-container .g_id_signin {
         transform: scale(0.6) translateX(-4px);;
         transform-origin: left top;
@@ -140,7 +144,6 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin-top: -5px;
       }
 
       /*
@@ -247,13 +250,15 @@
         margin-top: 4px;
         min-width: 120px;
       }
+
+
       
       .subheading {
-        font-size: 12px; /* Negative margin to bring it closer to header */
+        font-size: 12px; 
         max-width: 80%;
         margin: 0 auto;
         text-align: center;
-        margin-bottom: -5px;
+        margin-bottom: 10px;
       }
 
       .custom-signin-btn {
