--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -90,7 +90,7 @@
       <header class="header" id="index-header">
         <a href="/post_listings">Post Listing</a> 
       </header>
-      <div class="subheading">Enter details for a swipe you want to buy or sell. You must be signed in to submit the form.</div>
+      <div class="subheading">Enter details for a swipe you want to buy or sell. You must be signed in to submit.</div>
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
           <form id="listingForm" action="/submit_listing" method="POST" onsubmit="return requireSignIn(event)">
