--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
           <p style="line-height: 1.6; text-align: justify;">
             <p>
               Swipe Market is an online marketplace that connects students 
-              who want to sell, buy, and donate meal swipes. 
+              who want to buy, sell, and donate meal swipes. 
             </p>
             <ul>
               <li>
