--- a/templates/profile.html
+++ b/templates/profile.html
@@ -160,7 +160,7 @@
         
         <!-- Block User Section -->
         <div class="profile-form" style="margin-top: 40px; border-top: 1px solid #eee; padding-top: 20px;">
-          <p style="color: #666;">Enter the UNI of users you'd like to block. Blocked users won't be able to contact you or see your listings.</p>
+          <p style="color: #666;">Blocked users won't be able to see your listings and vice versa.</p>
           <div style="display: flex; flex-direction: column;">
             <label for="block-uni">UNI to Block</label>
             <div style="display: flex; gap: 10px;">
