--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="tables-container">
       <table>
-        <caption>Get Swiped In 
+        <caption>Buy a Swipe 
         </caption> 
         <thead>
           <tr>
@@ -129,7 +129,7 @@
               <button type="button" class="contact-button" 
                       data-listing-id="{{ listing.id }}" 
                       data-listing-type="seller" 
-                      onclick="openForm(this)">Get This Swipe</button>
+                      onclick="openForm(this)">Get Swiped In</button>
               <!--delete button that only appears to poster-->
               <div class="listing-actions" data-owner-email="{{ listing.user.email }}">
                 <button onclick="deleteListing('{{ listing.id }}', 'seller')" class="delete-button">X</button>
@@ -145,10 +145,7 @@
         </tbody>
       </table>
       <table>
-        <caption>Swipe Someone Else In <!--<br> <a href="/listings">
-          <button type="button" id="postListingsButton">Add a Request Listing</button>
-        </a>-->
-        </caption>
+        <caption>Sell a Swipe</caption>
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
