--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
             <ul>
               <li>
                 Browse Listings: if you see a swipe below that you'd like to buy or sell, 
-                click the "get this swipe" or "swipe them in" button to be 
+                click the "get swiped in" or "swipe them in" button to be 
                 automatically put in touch with the person who posted it.
               </li>
               <li>
