--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../static/header.css">
     <link rel="stylesheet" href="../static/general.css">
     <link rel="stylesheet" href="../static/swipemarket.css">
+    <link rel="stylesheet" href="../static/intermediate.css"> 
     <link rel="stylesheet" href="../static/phonestyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
