--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../static/header.css">
     <link rel="stylesheet" href="../static/general.css">
     <link rel="stylesheet" href="../static/swipemarket.css">
-    <link rel="stylesheet" href="../static/phonestyles.css">
+    <link rel="stylesheet" href="../static/phonestyles.css">  
+    <link rel="stylesheet" href="../static/intermediate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
