--- a/static/intermediate.css
+++ b/static/intermediate.css
@@ -2,13 +2,7 @@
   .tables-container {
     flex-direction: column;
   }
-}
-
-@media (min-width: 1250px){
-  table {
-    table-layout: fixed;
-  }
-
+  
   table th:nth-child(1),
   table td:nth-child(1) {
     width: 15%;
@@ -16,7 +10,7 @@
 
   table th:nth-child(2),
   table td:nth-child(2) {
-    width: 5%;
+    width: 10%;
   }
 
   table th:nth-child(3),
@@ -38,6 +32,42 @@
   table td:nth-child(6) {
     width: 25%;
     min-width: 120px;
-    white-space: nowrap;
+  }
+}
+
+@media (min-width: 1250px){
+  table {
+    table-layout: fixed;
+  }
+
+  table th:nth-child(1),
+  table td:nth-child(1) {
+    width: 15%;
+  }
+
+  table th:nth-child(2),
+  table td:nth-child(2) {
+    width: 10%;
+  }
+
+  table th:nth-child(3),
+  table td:nth-child(3) {
+    width: 15%;
+  }
+
+  table th:nth-child(4),
+  table td:nth-child(4) {
+    width: 10%;
+  }
+
+  table th:nth-child(5),
+  table td:nth-child(5) {
+    width: 15%;
+  }
+
+  table th:nth-child(6),
+  table td:nth-child(6) {
+    width: 25%;
+    min-width: 120px;
   }
 }
