--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -392,7 +392,6 @@
     gap: 4px; 
     align-items: center;
     justify-content: center;
-    width: 100%;
     flex-wrap: nowrap;
   }
 
@@ -514,6 +513,13 @@
     background-color: #FFFFFF;
     color: #000000;
     box-sizing: border-box;
+  }
+
+  table th:last-child,
+  table td:last-child {
+    text-align: center;
+    /* if you want vertical centering on multiline rows: */
+    vertical-align: middle;
   }
 
   /* Style for read-only inputs - moved after general input styles and made more specific */
