--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="form-group button-group">
-                        <button type="submit" class="sell-button">Update Listing</button>
+                        <button type="submit" class="update-button">Update Listing</button>
                     </div>
                 </form>
             </div>
