--- a/static/phonestyles.css
+++ b/static/phonestyles.css
@@ -151,6 +151,10 @@
         align-items: center;
       }
 
+      .switch-table{
+        font-size: 11px;
+      }
+
       /*
       .button-group {
         flex-direction: column;
