--- a/templates/index.html
+++ b/templates/index.html
@@ -126,8 +126,9 @@
       </div>
       <div class="tables-container">
       <table id="buy-table">
-        <caption>Buy a Swipe
-          <a href="#sell-table" class="switch-table">[Jump to Sell Table]</a>
+        <caption>
+          <span>Buy a Swipe</span>
+          <a href="#sell-table" class="switch-table">Jump to Sell Table</a>
         </caption> 
         <thead>
           <tr>
@@ -167,8 +168,9 @@
         </tbody>
       </table>
       <table id="sell-table">
-        <caption>Sell a Swipe
-          <a href="#buy-table" class="switch-table">[Jump to Buy Table]</a>
+        <caption>
+          <span>Sell a Swipe</span>
+          <a href="#buy-table" class="switch-table">Jump to Buy Table</a>
         </caption>
         <thead>
           <tr>
