--- a/templates/index.html
+++ b/templates/index.html
@@ -127,9 +127,9 @@
       <div class="tables-container">
       <table id="buy-table">
         <caption>
-          <span>Buy a Swipe</span>
-          <a href="#sell-table" class="switch-table">Jump to Sell Table</a>
-        </caption> 
+          <span style="font-size: 24px;">Buy a Swipe</span>
+          <a href="#sell-table" class="switch-table">Sell Table &gt;</a>
+        <caption>
         <thead>
           <tr>
             <th>Dining Hall(s)</th>
@@ -169,8 +169,8 @@
       </table>
       <table id="sell-table">
         <caption>
-          <span>Sell a Swipe</span>
-          <a href="#buy-table" class="switch-table">Jump to Buy Table</a>
+          <span style="font-size: 24px;">Sell a Swipe</span>
+          <a href="#buy-table" class="switch-table">&lt Buy Table</a>
         </caption>
         <thead>
           <tr>
