--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -394,7 +394,7 @@
     flex-wrap: nowrap;
   }
 
-  .delete-button, .edit-button, .switch-table {
+  .delete-button, .edit-button {
     font-size: 0.9rem;
     padding: 8px 16px;
     border: none;
@@ -419,7 +419,7 @@
     color: white;
   }
 
-  .edit-button, .switch-table {
+  .edit-button {
     background-color: #1a73e8;
     color: white;
   }
