--- a/static/swipemarket.css
+++ b/static/swipemarket.css
@@ -435,13 +435,13 @@
   }
 
   .switch-table:hover {
-    color: white !important;
     opacity: 0.9;
     transform: translateY(-2px);
   }
 
   .switch-table {
     font-weight: 450;
+    font-style: italic;
   }
 
   .table-caption{
