commenting out jumps

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
       <table id="buy-table">
         <caption>
           <span style="font-size: 24px;">Buy a Swipe</span>
-          <a href="#sell-table" class="switch-table">Next Table &gt</a>
+          <!--<a href="#sell-table" class="switch-table">Next Table &gt</a>-->
         </caption>
         <thead>
           <tr>
@@ -170,7 +170,7 @@
       <table id="sell-table">
         <caption>
           <span style="font-size: 24px;">Sell a Swipe</span>
-          <a href="#buy-table" class="switch-table">&lt Previous Table</a>
+          <!--<a href="#buy-table" class="switch-table">&lt Previous Table</a>-->
         </caption>
         <thead>
           <tr>
