--- a/templates/index.html
+++ b/templates/index.html
@@ -226,7 +226,7 @@
     <script src="../static/forms.js" type="text/javascript"></script>
     <div id="popup" class="form-popup">
         <div class="form-container">
-            <p id="popup-message">Connection email sent! Check your inbox</p>
+            <p id="popup-message">Connection email sent! Check your inbox.</p>
         </div>
     </div>
   </body>
