added line to how it works

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,11 +109,15 @@
               </li>
               <li>
                 Post Listing: if you'd like to add a listing to one of the tables 
-                below, click the "post listing" button and fill out the 
-                form. Potential buyers/sellers will then be able to contact you.
+                below, click the "post listing" button and fill out the form. 
+                Potential buyers/sellers will then be able to request an email 
+                putting them in touch with you. <strong>Your personal information will 
+                not be visible on the website; it will only be given over email 
+                to those who ask to contact you.</strong>
               </li>
               <li>
-                Listings automatically expire once the end time has passed but you can edit and delete them at any time before then.
+                Listings automatically expire once the end time has passed 
+                but you can edit and delete them at any time before then.
               </li>
             </ul>
             <p>
