--- a/templates/index.html
+++ b/templates/index.html
@@ -98,8 +98,8 @@
         <div class="how-it-works-content">
           <p style="line-height: 1.6; text-align: justify;">
             <p>
-              Swipe Market is an online marketplace that connects students 
-              who want to buy, sell, and donate meal swipes. 
+              <strong>Swipe Market is an online marketplace that connects students 
+              who want to buy, sell, and donate meal swipes. </strong>
             </p>
             <ul>
               <li>
