--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,9 @@
       gtag('config', 'G-D26R1LF247');
     </script>
     <style>
+      .soft-bold {
+        font-weight: 600;
+      }
     </style>
   </head>
   <!-- Google tag (gtag.js) -->
@@ -98,8 +101,8 @@
         <div class="how-it-works-content">
           <p style="line-height: 1.6; text-align: justify;">
             <p>
-              <strong>Swipe Market is an online marketplace that connects students 
-              who want to buy, sell, and donate meal swipes. </strong>
+              <span class="soft-bold">Swipe Market is an online marketplace that connects students 
+              who want to buy, sell, and donate meal swipes.</span>
             </p>
             <ul>
               <li>
@@ -111,9 +114,9 @@
                 Post Listing: if you'd like to add a listing to one of the tables 
                 below, click the "post listing" button and fill out the form. 
                 Potential buyers/sellers will then be able to request an email 
-                putting them in touch with you. <strong>Your personal information will 
+                putting them in touch with you. <span class="soft-bold">Your personal information will 
                 not be visible on the website; it will only be given over email 
-                to those who ask to contact you.</strong>
+                to those who ask to contact you.</span>
               </li>
               <li>
                 Listings automatically expire once the end time has passed 
