--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -19,6 +19,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <style>
+      .checkbox-group.disabled .checkbox-item:not(.any-checkbox) {
+        opacity: 0.5;
+        pointer-events: none;
+      }
+      .any-checkbox {
+        pointer-events: auto !important;
+        opacity: 1 !important;
+      }
+    </style>
     <script>
     ;(function(){
       const saved = [];
@@ -139,8 +149,8 @@
                   <label for="diana">Diana</label>
                 </div>
                 <div class="checkbox-item">
-                  <input type="checkbox" id="any" name="dining_hall[]" value="Any">
-                  <label for="any">Any Hall</label>
+                  <input type="checkbox" id="dining_any" name="dining_hall[]" value="Any">
+                  <label for="dining_any">Any</label>
                 </div>
               </div>
             </div>
@@ -193,8 +203,8 @@
                   <label for="cash">Cash</label>
                 </div>
                 <div class="checkbox-item">
-                  <input type="checkbox" id="any" name="payment_methods[]" value="Any">
-                  <label for="any">Any</label>
+                  <input type="checkbox" id="payment_any" name="payment_methods[]" value="Any">
+                  <label for="payment_any">Any</label>
                 </div>
                 <div class="checkbox-item">
                   <input type="checkbox" id="other" name="payment_methods[]" value="Other">
@@ -220,5 +230,42 @@
     <script src="../static/functions.js" type="text/javascript"></script>
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        // Handle dining hall checkboxes
+        const diningHallGroup = document.querySelector('.form-group:first-child .checkbox-group');
+        const anyDiningHall = document.getElementById('dining_any');
+        anyDiningHall.closest('.checkbox-item').classList.add('any-checkbox');
+        
+        anyDiningHall.addEventListener('change', function() {
+          if (this.checked) {
+            diningHallGroup.classList.add('disabled');
+            // Uncheck all other checkboxes
+            document.querySelectorAll('.form-group:first-child input[type="checkbox"]:not(#dining_any)').forEach(checkbox => {
+              checkbox.checked = false;
+            });
+          } else {
+            diningHallGroup.classList.remove('disabled');
+          }
+        });
+
+        // Handle payment method checkboxes
+        const paymentGroup = document.querySelector('.form-group:nth-child(5) .checkbox-group');
+        const anyPayment = document.getElementById('payment_any');
+        anyPayment.closest('.checkbox-item').classList.add('any-checkbox');
+        
+        anyPayment.addEventListener('change', function() {
+          if (this.checked) {
+            paymentGroup.classList.add('disabled');
+            // Uncheck all other checkboxes
+            document.querySelectorAll('.form-group:nth-child(5) input[type="checkbox"]:not(#payment_any)').forEach(checkbox => {
+              checkbox.checked = false;
+            });
+          } else {
+            paymentGroup.classList.remove('disabled');
+          }
+        });
+      });
+    </script>
   </body>
 </html> 
