--- a/templates/edit_listing.html
+++ b/templates/edit_listing.html
@@ -45,6 +45,16 @@
     <div id="g_id_onload" data-client_id="362313378422-s5g6ki5lkph6vaeoad93lfirrtugvnfl.apps.googleusercontent.com" data-callback="handleCredentialResponse" data-auto_prompt="false">
     </div>
 </head>
+<style>
+    .checkbox-group.disabled .checkbox-item:not(.any-checkbox) {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+    .any-checkbox {
+      pointer-events: auto !important;
+      opacity: 1 !important;
+    }
+  </style>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-V549ZYC27J"></script>
 <script>
@@ -136,8 +146,8 @@
                                 <label for="diana">Diana</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="any" name="dining_hall[]" value="Any" {% if "Any" in selected_halls %}checked{% endif %}>
-                                <label for="any">Any Hall</label>
+                                <input type="checkbox" id="dining_any" name="dining_hall[]" value="Any" {% if "Any" in selected_halls %}checked{% endif %}>
+                                <label for="dining_any">Any</label>
                             </div>
                         </div>
                     </div>
@@ -187,8 +197,8 @@
                                 <label for="cash">Cash</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="any" name="payment_methods[]" value="Any" {% if "Any" in selected_methods %}checked{% endif %}>
-                                <label for="any">Any</label>
+                                <input type="checkbox" id="payment_any" name="payment_methods[]" value="Any" {% if "Any" in selected_methods %}checked{% endif %}>
+                                <label for="payment_any">Any</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="other" name="payment_methods[]" value="Other" {% if "Other" in selected_methods %}checked{% endif %}>
@@ -207,6 +217,39 @@
     <script src="../static/functions.js" type="text/javascript"></script>
     <script src="../static/signin.js" type="text/javascript"></script>
     <script src="../static/forms.js" type="text/javascript"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+          // grab each "Any" checkbox and climb up to the wrapper
+          const anyDiningHall = document.getElementById('dining_any');
+          const diningHallGroup = anyDiningHall.closest('.checkbox-group');
+          anyDiningHall.closest('.checkbox-item').classList.add('any-checkbox');
+        
+          anyDiningHall.addEventListener('change', function() {
+            if (this.checked) {
+              diningHallGroup.classList.add('disabled');
+              diningHallGroup.querySelectorAll('input[type="checkbox"]:not(#dining_any)')
+                .forEach(cb => cb.checked = false);
+            } else {
+              diningHallGroup.classList.remove('disabled');
+            }
+          });
+        
+          const anyPayment = document.getElementById('payment_any');
+          const paymentGroup = anyPayment.closest('.checkbox-group');
+          anyPayment.closest('.checkbox-item').classList.add('any-checkbox');
+        
+          anyPayment.addEventListener('change', function() {
+            if (this.checked) {
+              paymentGroup.classList.add('disabled');
+              paymentGroup.querySelectorAll('input[type="checkbox"]:not(#payment_any)')
+                .forEach(cb => cb.checked = false);
+            } else {
+              paymentGroup.classList.remove('disabled');
+            }
+          });
+        });
+    </script>
+        
     <div id="popup" class="form-popup">
         <div class="form-container">
             <p id="popup-message">Connection email sent! Check your inbox</p>
